--- a/h2wp.tex
+++ b/h2wp.tex
@@ -7,7 +7,7 @@
 \begin{document}
 \maketitle
 
-هر کس که وارد مبحث علم ریاضیات میشود باید توانایی درست خواندن و درک کردن و نوشتن مسائل و اثبات ها را کسب کند.
+هر کس که وارد مبحث علم ریاضیات میشود باید توانایی درست خواندن و درک کردن و نوشتن مسائل و اثبات ها را کسب 
 چیزی که برای ما اهمیت دارد درست نویسی است چرا که درست نوشتن اثبات ها نقش به سزایی در درست خواندن و درک کردن آن ها نیز دارد.
 
 خیلی از اوقات پیش می آید که اثبات موضوعی بسیار منطقی ب نظر می آید ولی در واقع کاملا اشتباه هست. 
