--- a/h2wp.tex
+++ b/h2wp.tex
@@ -149,4 +149,132 @@ $$(1 - 4x) ^ {-5} =
 جمله $x^{12}$ به ازای مقدار $k = 12$ ساخته می‌شود. بنابراین جواب برابر خواهد بود با: 
 $$\binom{16}{12} (4)^{12}$$
 
+
+\question 
+   با استفاده از توابع مولد نشان دهید تعداد روش های انتخاب ۴ عضو دو به دو  نامتوالی از مجموعه اعداد n
+			 ,...,1,2,3
+			 برابر با 
+			 انتخاب 4 از n-3 است.
+			 
+\solution
+یک زیرمجموعه از این نوع مثلا {۱و۳و۷و۱۰} را انتخاب و نابرابری های اکید 
+    $ \\ 0 < 1 < 3 < 7 < 10 < n+1 \\ $ 
+   را در نظر میگیریم. و بررسی میکنیم چند عدد صحیح بین هر دو عدد متوالی از این اعداد وجود دارند. در اینجا ۰ و ۱ و۳ و۲ و n-۱۰ 
+   را به دست می آوریم: ۰ زیرا عددی صحیح بین ۰ و ۱ وجود ندارد و ۱ زیرا تنها عدد ۲ بین ۱ و۳ وجود دارد و ۳ زیرا اعداد صحیح ۴ و۵ و۶ بین ۳ و۷ وجود دارند و ... .
+   مجموع این ۵ عدد صحیح برابر
+   $ 0 + 1 + 3 + 2 + n-10 = n-4 $ 
+     است.
+     $ \hyperref[sec:1]{\textcolor{capri}{(1.6.E.1)}}  $
+     
+    پس تابع مولد زیر را داریم.
+    
+   \begin{align*}
+   G(x) = ( 1 + x^2 + x^3 + ...)^2 (x + x^2 + x^3 + ...)^3 = ( \sum_{k = 0}^{\infty} x^k)^2 ( \sum_{k = 0}^{\infty} x^{k+1})^3 =\\ \frac{1}{(1-x)^2} . (\frac{x}{1-x})^3 = \frac{x^3 }{(1-x)^5} = x^2 (1-x)^{-5} = x^3 \sum_{k=0}^{\infty} \binom{k+4}{k} x ^ k =\\ \sum_{k=0}^{\infty} \binom{k+4}{k} x^{k+3} = \hyperref[sec:2]{\textcolor{capri}{(1.6.E.2)}}  \hspace{0.5 cm} \sum_{k=0}^{\infty}\binom{k+1}{k-3} x^k
+\end{align*}    
+      
+      به دنبال ضریب
+      $ x ^ {n-4 } $
+      میگشتیم پس 
+      $ k = n-4 $
+      و جواب نهایی برابر است با
+      $\binom{n-3}{n-7} = \binom{n-3}{4} \\ \\ \hyperref[sec:3]{\textcolor{capri}{(1.6.N.3)}} \\   $
+  
+  
+      
+\notes
+
+\Enote
+  مثال زدن باید به صورتی باشد که حذف آن اختلالی در فهم جواب ایجاد نکند . در اینجا اگر مثال پاراگراف اول را حذف کنیم مشخص نیست تابع مولد برچه اساسی نوشته شده است. پس باید توضیحی درمورد تابع مولد و جمله ای که به دنبال ضریب آن هستیم بدهیم \label{sec:1} 
+		
+\Enote
+     نیاز هست که کاملا گفته شود چه تغییر متغیری انجام میشود . در اینجا تغییر متغیر $ k \rightarrow {k+3} $   را داریم.  همیشه به هنگام تغییر متغیر توجه کنیم ممکن است کران ها تغییر کنند. در اینجا کران پایین از صفر به سه میرود. \label{sec:2} 
+	 صورت اصلاح شده:
+	 $ \sum_{k=3}^{\infty}\binom{k+1}{k-3} x^k $
+	
+\Nnote		
+	  در طی پاسخ به سوال خوب است دقت کنیم همه ی اعداد را یا فارسی یا انگلیسی 
+	  بنویسیم. \label{sec:3} 
+	  
+	  
+\solution
+  تابع مولد فاصله از مبدا:
+   \begin{align*}
+   G(x)=(1+x+x^2+...)(x+x^2+x^3+...)^3
+   \end{align*}
+   در مجموع n-4 عدد داریم . توان های x باید بین مبدا و مقصد باشند پس باید توانی از x را که کوچک تر یا مساوی n-4 هستند را بیابیم:
+   
+   \begin{align*}
+   G(x)= \frac{x^3}{(1-x)^4} = x^3 (1-x)^{-4} = x^3 \sum_{k=0}^{\infty}\binom{k+3}{3} x^k \\ 
+   \longrightarrow \sum_{k=0}^{\infty}\binom{x+k}{k} = \frac{1}{(1+x)^{k+1}} 
+   \longrightarrow k+3 \le n-4 \rightarrow k \le n-7
+   \end{align*}
+   
+   \begin{align*}
+     \binom{n+1}{r+1} = \sum_{k=r}^{n} \binom{k}{r} \hspace{2cm} (1) \\
+  \end{align*}
+  
+   مجموع حالات: 
+   \begin{align*}
+   \longrightarrow \sum_{k=0}^{n-7}\binom{k+3}{3} \xrightarrow{(1)}  \binom{n-7+4}{4} = \binom{n-3}{4}   \hspace{2cm} 
+    { \hyperref[sec:4]{\textcolor{capri}{(1.6.E.4)}}}
+   \end{align*}
+   
+   
+   
+ \notes
+ 
+ \Enote
+   به هنگام جایگذاری در فرمول باید جایگذاری ها واضح باشد. در این مثال در فرمول (۱) کران پایین از r هست ولی در قسمتی که از آن استفاده شده کران پایین از ۰ است. همین مطلب گویای آن است که به توضیحات بیشتری نیاز هست. \label{sec:4} 
+		
+		عبارت زیر صورت کامل شده این نکته است:
+		\begin{align*}
+		\longrightarrow \sum_{k=0}^{n-7} \binom{k+3}{k} = \sum_{k=3}^{k-4} \binom{k}{k-3} = \sum_{k=3}^{n-4} \binom{k}{3} \xrightarrow[{r \rightarrow 3},{ n \rightarrow {n-4} }]{(1)} \binom{n-3}{4}
+\end{align*}	
+
+
+\solution*{پاسخ صحیح}
+
+   تعداد عضو‌های  انتخاب نشده کوچکتر از عضو اول انتخاب شده را 
+                $x_1$،
+                عضوهای انتخاب نشده بین عضو اول و دوم انتخاب شده را
+                $x_2$،
+                عضو‌های انتخاب نشده بین عضو دوم و سوم انتخاب شده را
+                $x_3$،
+                عضو‌های انتخاب نشده بین عضو سوم و چهارم انتخاب شده را
+                $x_4$ و
+                عضوهای انتخاب نشده بزرگ‌تر از چهارمین عضو انتخاب شده را 
+                $x_5$
+                می‌گیریم. کافی است تعداد جواب‌های صحیح نامنفی معادله زیر را با شرایط 
+                $x_1, x_5 \geq 0 \; x_2 x_3, x_4 \geq 1$
+                بشماریم
+               
+                $$x_1 + x_2 + x_3 + x_4 + x_5 = n - 4$$
+                که برابر است با ضریب
+                $x^{n - 4}$
+                در عبارت:\\
+              
+                $$(1 + x + x^2 + ...)(x + x^2 + x^3 + ...)(x + x^2 + x^3 + ...)(x + x^2 + x^3 + ...)(1 + x + x^2 + ...) = \frac{x^3}{(1 - x)^5}$$
+                
+                 بنابراین کافی است ضریب $x^{n - 7}$ را در بسط
+                  $(1 - x)^{-5}$
+         بشماریم . 
+               
+               
+                   طبق جدول  
+                  Functions Generating Useful
+		از کتاب Rosen
+		که استاد نیز به آن اشاره کردند داریم:\\
+       
+		    $$(1 - x) ^ {-n} = \sum_{k = 0}^{\infty} \binom{n + k - 1}{k} x^{k} $$
+
+	    بنابراین در این سوال داریم:
+                
+                    $$(1 - x)^{-5} = \sum_{k = 0}^{\infty} \binom{5 + k - 1}{k}x^k
+                    = \sum_{k = 0}^{\infty} \binom{k + 4}{k}x^k
+                    = \sum_{k = 0}^{\infty} \binom{k + 4}{4}x^k$$
+             
+                $x^{n - 7}$ به ازای $k = n -7$ ساخته می‌شود. بنابراین جواب برابر است با:\\
+               
+                    $$\binom{n - 3}{4}$$
+                	 
 \end{document}
