--- a/h2wp.tex
+++ b/h2wp.tex
@@ -2,7 +2,7 @@
 
 \newcommand{\eventclass}{ریاضیات گسسته}
 \newcommand{\eventtype}{رو به سعادت در نوشتار}
-\newcommand{\eventcntrbs}{سودابه محمدهاشمی - کیمیا محمدطاهری - یارا کامکار - بهزاد شایق}
+\newcommand{\eventcntrbs}{سودابه محمدهاشمی - کیمیا محمدطاهری}
 
 \begin{document}
 \maketitle
@@ -37,7 +37,7 @@ $ \hyperref[sec:1]{\textcolor{capri}{(1.3.N.1)}} $
  $ \hyperref[sec:2]{\textcolor{capri}{(1.3.N.2)}} $
 در این صورت باز میتوان گروه ۱۰ تایی را از دانش آموزان انتخاب کرد که حداکثر دو نفر نمره یکسان داشته باشند . پس فرض اولیه غلط بوده و مشخص میشود که لااقل از یکی از نمرات وجود دارد که ۱۵ دانش آموز یا بیشتر 
 آن نمره را دارند.
- $ \hyperref[sec:3]{\textcolor{capri}{(1.3.T.3)}}  $
+ $ \hyperref[sec:3]{\textcolor{capri}{(1.3.T.1)}}  $
 
 
 \notes
@@ -175,7 +175,7 @@ $$\binom{16}{12} (4)^{12}$$
       میگشتیم پس 
       $ k = n-4 $
       و جواب نهایی برابر است با
-      $\binom{n-3}{n-7} = \binom{n-3}{4} \\ \\ \hyperref[sec:3]{\textcolor{capri}{(1.6.N.3)}} \\   $
+      $\binom{n-3}{n-7} = \binom{n-3}{4} \\ \\ \hyperref[sec:3]{\textcolor{capri}{(1.6.N.1)}} \\   $
   
   
       
@@ -214,7 +214,7 @@ $$\binom{16}{12} (4)^{12}$$
    مجموع حالات: 
    \begin{align*}
    \longrightarrow \sum_{k=0}^{n-7}\binom{k+3}{3} \xrightarrow{(1)}  \binom{n-7+4}{4} = \binom{n-3}{4}   \hspace{2cm} 
-    { \hyperref[sec:4]{\textcolor{capri}{(1.6.E.4)}}}
+    { \hyperref[sec:4]{\textcolor{capri}{(1.6.E.3)}}}
    \end{align*}
    
    
@@ -289,7 +289,7 @@ A=\sum_{i=0}^{n} i{\binom{n}{i}}^2 \xrightarrow{\times 2} 2A = \sum_{i=0}^{n} i{
  \sum_{i=0}^{n} (i + (n-i)) {\binom{n}{i}}^2 \rightarrow 2A = n \sum_{i=0}^{n} {\binom{n}{i}}^2 \rightarrow 2A = n \sum_{i=0}^{n} \binom{n}{i} \binom{n}{n-i}
 \end{align*}
 بنابراین میدانیم که:
-  $ \hyperref[sec:1]{\textcolor{red}{(1.7.N.1)}}  $
+  $ \hyperref[sec:1]{\textcolor{capri}{(1.7.N.1)}}  $
   \begin{center}
   $  2A = n\binom{2n}{n} \rightarrow A= \frac{n}{2} \binom{2n}{n} $
   \end{center}
