--- a/h2wp.tex
+++ b/h2wp.tex
@@ -23,11 +23,106 @@
 
 در این جزوه ما سعی داریم شما را بیشتر با درست نویسی و نکاتی که در این جهت ما را سوق میدهند آشنا کنیم ( تا در نهایت یاد بگیریم در دیگر مراحل زندگی مان هم با منطق باشیم. )
 
+\textbf{انواع نکات}
+
+در این جزوه با سه دسته نکته مواجه هستیم:
+\begin{enumerate}
+
+\item
+دسته $E$: نکات درست نویسی که رعایت نکردن آن موجب کسر نمره می شود.
+\item
+دسته $N$: نکات درست نویسی که رعایت کردن آنها واجب نیست, اما رعایت کردن آن ها به خوانایی راه حل و جلوگیری از خطا کمک می کند.
+\item
+دسته $T$: دام های آموزشی و خطا های رایج در حل سوالات.
+
+\end{enumerate}
 \chapter*{شمارش}
 
 \question
-\question
+سه مهرۀ رخ متمایز و صفحه شطرنجی $8\times8$ داریم. به چند روش می‌توان این سه مهره را در سه خانه از این صفحه قرار داد به طوری که حداقل یک مهره وجود داشته باشد که توسط هیچ مهره ای تهدید نمی شود؟
+\solution
+  سوال را با اصل متمم حل می کنیم:\\
+      -  کل حالات:\\
+        \[64\times63\times62\]
+        \textcolor{red}{$(1.1.N.2)$}\\
+      -  حالات نامطلوب: حالاتی که همه رخ ها تهدید بشوند.\\
+         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول باید تهدید بشود رخ دوم را باید در سطر یا ستون رخ اول قرار بدهیم که ۱۴ حالت دارد. چون رخ سوم هم باید تهدید بشود باید در سطر یا ستون یکی از رخ ها باشد که در مجموع شامل ۶ خانه در سطر یا ستون مشترک دو رخ قبلی و ۱۴ خانه در سطرها یا ستون های غیر مشترک دو رخ است. پس کل حالت ها برابر است با:\\
+         \[64\times14\times20\]
+         \textcolor{red}{$(1.1.T.1)$}\\
+-         حالات مطلوب: طبق اصل متمم برابر است با:
+         \[64\times63\times62 - 64\times14\times20\]
+\notes
+\Tnote
+نشمردن همه حالت ها: در اینجا تمام حالات نامطلوب محاسبه نشده است, زیرا این امکان وجود دارد که رخ اول توسط رخ دوم تهدید نشود و این حالت در نظر گرفته نشده است.
+\Nnote
+بهتر بود اشاره شود که  به دلیل تمایز رخ ها چنین نتیجه ای گرفته شده است.
+\solution
+     -  کل حالات:\\
+        \[64\times63\times62\]
+      -  حالات نامطلوب: حالاتی که همه رخ ها تهدید بشوند.\\
+      \textcolor{red}{$(1.1.N.3)$}
+         \[64\times7\times20\times2\]
+-         حالات مطلوب: طبق اصل متمم برابر است با:
+         \[64\times63\times62 - 64\times14\times20\]
+\notes
+\Nnote
+نبود توضیحات کافی برای عبارت: به دلیل نبود توضیحات کافی, تشخیص چرایی غلط بودن جواب نهایی ممکن نیست.
+\solution*{پاسخ صحیح}
 
+   -  کل حالات: به دلیل تمایز رخ ها برابر است با:\\
+        \[ P(64,3) = 64\times63\times62\]
+      -  حالات نامطلوب: حالاتی که همه رخ ها تهدید بشوند.\\
+      دو حالت داریم:
+      \begin{enumerate}
+\item
+رخ اول رخ دوم را تهدید کند:\\
+         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول باید توسط رخ دوم تهدید بشود رخ دوم را باید در سطر یا ستون رخ اول قرار بدهیم که ۱۴ حالت دارد. چون رخ سوم هم باید تهدید بشود باید در سطر یا ستون یکی از رخ ها باشد که در مجموع شامل ۶ خانه در سطر یا ستون مشترک دو رخ قبلی و ۱۴ خانه در سطرها یا ستون های غیر مشترک دو رخ است. پس کل حالت ها برابر است با:\\
+         \[64\times14\times20\]
+\item
+رخ اول رخ دوم را تهدید نکند:\\
+         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول نباید توسط رخ دوم تهدید بشود رخ دوم را در خانه ای به جز سطر یا ستون رخ اول قرار بدهیم که ۴۹ حالت دارد. حال رخ سوم باید هر دو رخ را تهدید کند پس باید در یکی از محل های تقاطع سطر و ستون رخ اول و رخ دوم قرار بگیرد که دو حالت دارد, پس کل حالت ها برابر است با:\\
+         \[64\times49\times2\]
+         
+      \end{enumerate}
+-         حالات مطلوب: طبق اصل متمم برابر است با:
+         \[64\times63\times62\ - (64\times14\times20\ + 64\times49\times2\ )\]
+         
+\question
+  اتحاد زیر را ثابت کنید.\\ \\
+     \centerline{$1^2 {n \choose 1} + 2^2 {n \choose 2} + 3^2 {n \choose 3} + ... + n^2 {n \choose n} = n(n+1)2^{n-2}$}\\ \\
+\solution
+\textcolor{red}{$(1.2.E.2)$}
+   فرض کنید $ P = \displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}}$ بیانگر تعداد راه های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد یا دو فرد متمایز، رئیس کمیته باشند. \textcolor{red}{$(1.2.E.3)$} حال این شمارش را به روش دیگری انجام می دهیم.
+    \begin{enumerate}
+        \item 
+        با فرض داشتن یک رئیس، رئیس را انتخاب کرده و تصمیم می‌گیریم که بقیه افراد حضور داشته باشند یا خیر و حالات به دست آمده را جمع می‌کنیم با حالاتی که 2 رئیس را انتخاب کردیم \textcolor{red}{$(1.2.E.1)$}و در مورد حضور یا عدم حضور بقیه افراد تصمیم گرفتیم:
+        \[P = n\times{2^{n-1}} + n\times(n-1)\times{2^{n-2}} = n\times(n+1)\times{2^{n-2}}\]
+    \end{enumerate}
+    از تساوی این ۲ حالت حکم مساله اثبات می‌شود:
+    \[\displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}} = n\times(n+1)\times{2^{n-2}}\]
+    \\ 
+\notes
+\Enote
+عدم تطابق توضیحات با فرمول نوشته شده, انتخاب دو رئیس از میان $n$ نفر $\binom{n}{2}$ حالت دارد نه $n\times(n-1)$ 
+\Nnote
+بهتر است روش اثبات (دوگانه شماری)ذکر شود
+\Enote
+یک طرف دوگانه شماری که نیازمند اثبات است, بدیهی در نظر گرفته شده است.
+\solution*{پاسخ صحیح}
+
+سوال را با دوگانه شماری حل می کنیم:\\
+   فرض کنید $ P$ بیانگر تعداد راه های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد رئیس کمیته و یک نفر معاون باشند و رئیس و معاون می توانند یک نفر باشند. شمارش این راه ها به 2 روش امکان پذیر است.
+    \begin{enumerate}
+        \item 
+        با فرض یکسان بودن رئیس و معاون، رئیس را انتخاب کرده و تصمیم می‌گیریم که بقیه افراد حضور داشته باشند یا خیر و حالات به دست آمده را جمع می‌کنیم با حالاتی که رئیس و معاون متمایز را انتخاب کردیم و در مورد حضور یا عدم حضور بقیه افراد تصمیم گرفتیم:
+        \[P = n\times{2^{n-1}} + n\times(n-1)\times{2^{n-2}} = n\times(n+1)\times{2^{n-2}}\]
+        \item
+        ابتدا این که چه اعضایی کمیته و رئیس و معاون را تشکیل دهند را انتخاب می‌کنیم که این تعداد می‌تواند هر عددی باشد، سپس رئیس و معاون یکسان یا متمایز را از بین آن ها انتخاب می‌کنیم:
+        \[P = \displaystyle\sum_{k=0}^{n} {\binom{n}{k}(k(k-1)+k)} = \displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}}\]
+    \end{enumerate}
+    از تساوی 2 حالت فوق حکم مساله اثبات می‌شود:
+    \[\displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}} = n\times(n+1)\times{2^{n-2}}\]
+    \\ \\
 \question
 ۶۰ دانشجو در کلاس ریاضیات گسسته حضور دارند.در میان هر ۱۰ نفر از این کلاس , حداقل ۳ نفر نمره مبانی یکسانی دارند. ثابت کنید در این کلاس ۱۵ نفر وجود دارند که نمره مبانی آن ها یکسان است.
 
@@ -147,7 +242,59 @@ $$(1 - 4x) ^ {-5} =
 $$\binom{16}{12} (4)^{12}$$
 
 \question
+چند عدد طبیعی حداکثر ۹ رقمی وجود دارد که مجموع ارقام آن برابر با ۳۲ باشد؟\\ \\
+\solution
+  سوال را با اصل شمول و عدم شمول حل می کنیم: 
+   %\[|A_1\cup A_2\cup A_3\cup A_4\cup A_5\cup A_6\cup A_7\cup A_8\cup A_9|=|A_1|+|A_1\cup A_2|+|A_1\cup A_2\cup A_3|+|A_1\cup A_2\cup A_3\cup A_4|\]
+   
+    \[|A_1\cup A_2\cup... \cup A_9|=\binom{9}{1}|A_1|+\binom{9}{2}|A_1\cap A_2|+...+\binom{9}{9}|A_1\cap A_2\cap...\cap A_9|\]\textcolor{red}{$(1.5.E.2)$}\\
+    حال مقدار عبارت ها را حساب می کنیم:\\
+    \[|A_1|=\binom{30}{8}\]
+    \[|A_1\cap A_2|=\binom{20}{8}\]
+    \[|A_1\cap A_2\cap A_3|=\binom{10}{8}\]
+    برای بقیه جمله ها جواب برابر ۰ است.\\
+    حال از اصل متمم برای به دست آوردن جواب نهایی استفاده می کنیم:\\
+        -کل حالات:
+     \[\binom{40}{8}\]\\
+     - حالات مطلوب:
+     \[\binom{40}{8}- \binom{9}{1}\binom{30}{8}+\binom{9}{2}\binom{20}{8}-\binom{9}{3}\binom{10}{8}\]
+     \textcolor{red}{$(1.5.E.1)$}
+     
+\notes
+\Enote
+تعریف متغیر های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال ها به هیج وجه مشخض نیست
+\Enote
+اثبات و یا در صورت وضوح, اشاره به تقارن میان مجموعه ها برای استفاده از اصل شمول و عدم شمول به این شکل ضروری است.
+\solution*{پاسخ صحیح}
 
+رقم $i$ ام این عدد را با $x_i$ نشان می دهیم, بنابراین به دنبال یافتن تعداد جواب های صحیح معادله زیر هستیم:
+    \[\sum\limits_1^9 x_i=32\]
+    \[\forall i \in [1,9] ,i \in N : x_i\leq 9\]
+    %$\sum\limits_1^9 x_i=32$
+    %$\exists i \in [1,9] ,i \in N : x_i\geq 10$
+  تعداد جواب های صحیح این معادله را به کمک اصل متمم پیدا می کنیم:\\
+     -کل حالات:تعداد جواب های صحیح نامنفی معادله  $\sum\limits_1^9 x_i=32 $ .این یک معادله سیاله است و تعداد جواب های صحیح آن برابر است با:
+     
+     \[\binom{40}{8}\]\\
+    -حالات نامطلوب:تعداد جواب های صحیح نامنفی معادله $\sum\limits_1^9 x_i=32$  
+     به طوری که:\\
+     ($\exists i \in [1,9] ,i \in N : x_i\geq 10$)\\
+     حال اگر مجموعه حالت هایی که در آن $x_i\geq 10 $ است را با $A_i$نشان دهیم, کافی است تعداد اعضای اجتماع این مجموعه ها را بیابیم\\ 
+     طبق اصل شمول و عدم شمول و با توجه به تقارن میان $A_i$ ها داریم: 
+     \[|A_1\cup A_2\cup... \cup A_9|=\binom{9}{1}|A_1|+\binom{9}{2}|A_1\cap A_2|+...+\binom{9}{9}|A_1\cap A_2\cap...\cap A_9|\]
+   % \[|\bigcup\limits^9_{i=1}A_i|=\sum_{k=1}^{9}(-1)^{k+1}\binom{9}{k}|\bigcap\limits^k_{i=1}A_i|\]\\%
+   برای محاسبه مقدار عبارت ها, در معادله سیاله متناظر, در صورتی که $x_i\geq 10$ بود قرار می دهیم $x_i=y_i+10 $ و در غیر این صورت قرار می دهیم $x_i=y_i$, حال اگر تعداد $i$ هایی را که به ازای آن ها $x_i\geq 10 $ است را با $k$ نشان بدهیم, حال به دنبال تعداد جواب های صحیح نامنفی معادله سیاله $\sum\limits_1^9 y_i=32-10k $ هستیم, که برابر است با: 
+   \[\binom{40-10k}{8}\] 
+    حال مقدار عبارت ها را حساب می کنیم:\\
+    \[|A_1|=\binom{30}{8}\hspace{2cm} (k=1)\]
+    \[|A_1\cap A_2|=\binom{20}{8}\hspace{2cm} (k=2)\]
+    \[|A_1\cap A_2\cap A_3|=\binom{10}{8}\hspace{2cm} (k=3)\]
+    برای بقیه جمله ها جواب برابر ۰ است.\\
+    پس کل حالات نامطلوب برابر است با:
+    \[\binom{9}{1}\binom{30}{8}-\binom{9}{2}\binom{20}{8}+\binom{9}{3}\binom{10}{8}\]
+     - حالات مطلوب: طبق اصل متمم برابر است با:
+     \[\binom{40}{8}- \binom{9}{1}\binom{30}{8}+\binom{9}{2}\binom{20}{8}-\binom{9}{3}\binom{10}{8}\]
+    
 \question 
    با استفاده از توابع مولد نشان دهید تعداد روش های انتخاب ۴ عضو دو به دو  نامتوالی از مجموعه اعداد n
 			 ,...,1,2,3
