--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt,largemargins]{h2wp}
 
 \newcommand{\eventclass}{ریاضیات گسسته}
-\newcommand{\eventtype}{رو به سعادت در نوشتار}
+\newcommand{\eventtype}{افکار سازگار نوشتار نابکار}
 \newcommand{\eventcntrbs}{سودابه محمدهاشمی - کیمیا محمدطاهری}
 
 \begin{document}
@@ -29,9 +29,9 @@
 \begin{enumerate}
 
 \item
-دسته $E$: نکات درست نویسی که رعایت نکردن آن موجب کسر نمره می شود.
+دسته $E$: نکات درست نویسی که رعایت نکردن آن باعث ناقص شدن اثبات و در نتیجه کسر نمره می شود.
 \item
-دسته $N$: نکات درست نویسی که رعایت کردن آنها واجب نیست, اما رعایت کردن آن ها به خوانایی راه حل و جلوگیری از خطا کمک می کند.
+دسته $N$: نکات درست نویسی که رعایت کردن آنها واجب نیست, امابه خوانایی راه حل, ابهام زدایی, پرهیز از تکرار و جلوگیری از خطا کمک می کنند.
 \item
 دسته $T$: دام های آموزشی و خطا های رایج در حل سوالات.
 
@@ -44,28 +44,25 @@
   سوال را با اصل متمم حل می کنیم:\\
       -  کل حالات:\\
         \[64\times63\times62\]
-        \textcolor{red}{$(1.1.N.2)$}\\
       -  حالات نامطلوب: حالاتی که همه رخ ها تهدید بشوند.\\
          رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول باید تهدید بشود رخ دوم را باید در سطر یا ستون رخ اول قرار بدهیم که ۱۴ حالت دارد. چون رخ سوم هم باید تهدید بشود باید در سطر یا ستون یکی از رخ ها باشد که در مجموع شامل ۶ خانه در سطر یا ستون مشترک دو رخ قبلی و ۱۴ خانه در سطرها یا ستون های غیر مشترک دو رخ است. پس کل حالت ها برابر است با:\\
          \[64\times14\times20\]
-         \textcolor{red}{$(1.1.T.1)$}\\
 -         حالات مطلوب: طبق اصل متمم برابر است با:
          \[64\times63\times62 - 64\times14\times20\]
 \notes
-\Tnote
+\Tnote\label{n1}
 نشمردن همه حالت ها: در اینجا تمام حالات نامطلوب محاسبه نشده است, زیرا این امکان وجود دارد که رخ اول توسط رخ دوم تهدید نشود و این حالت در نظر گرفته نشده است.
-\Nnote
+\Nnote\label{n2}
 بهتر بود اشاره شود که  به دلیل تمایز رخ ها چنین نتیجه ای گرفته شده است.
 \solution
      -  کل حالات:\\
         \[64\times63\times62\]
       -  حالات نامطلوب: حالاتی که همه رخ ها تهدید بشوند.\\
-      \textcolor{red}{$(1.1.N.3)$}
          \[64\times7\times20\times2\]
 -         حالات مطلوب: طبق اصل متمم برابر است با:
          \[64\times63\times62 - 64\times14\times20\]
 \notes
-\Nnote
+\Nnote\label{n3}
 نبود توضیحات کافی برای عبارت: به دلیل نبود توضیحات کافی, تشخیص چرایی غلط بودن جواب نهایی ممکن نیست.
 \solution*{پاسخ صحیح}
 
@@ -91,22 +88,21 @@
   اتحاد زیر را ثابت کنید.\\ \\
      \centerline{$1^2 {n \choose 1} + 2^2 {n \choose 2} + 3^2 {n \choose 3} + ... + n^2 {n \choose n} = n(n+1)2^{n-2}$}\\ \\
 \solution
-\textcolor{red}{$(1.2.E.2)$}
-   فرض کنید $ P = \displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}}$ بیانگر تعداد راه های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد یا دو فرد متمایز، رئیس کمیته باشند. \textcolor{red}{$(1.2.E.3)$} حال این شمارش را به روش دیگری انجام می دهیم.
+   فرض کنید $ P = \displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}}$ بیانگر تعداد راه های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد یا دو فرد متمایز، رئیس کمیته باشند.  حال این شمارش را به روش دیگری انجام می دهیم.
     \begin{enumerate}
         \item 
-        با فرض داشتن یک رئیس، رئیس را انتخاب کرده و تصمیم می‌گیریم که بقیه افراد حضور داشته باشند یا خیر و حالات به دست آمده را جمع می‌کنیم با حالاتی که 2 رئیس را انتخاب کردیم \textcolor{red}{$(1.2.E.1)$}و در مورد حضور یا عدم حضور بقیه افراد تصمیم گرفتیم:
+        با فرض داشتن یک رئیس، رئیس را انتخاب کرده و تصمیم می‌گیریم که بقیه افراد حضور داشته باشند یا خیر و حالات به دست آمده را جمع می‌کنیم با حالاتی که 2 رئیس را انتخاب کردیم در مورد حضور یا عدم حضور بقیه افراد تصمیم گرفتیم:
         \[P = n\times{2^{n-1}} + n\times(n-1)\times{2^{n-2}} = n\times(n+1)\times{2^{n-2}}\]
     \end{enumerate}
     از تساوی این ۲ حالت حکم مساله اثبات می‌شود:
     \[\displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}} = n\times(n+1)\times{2^{n-2}}\]
     \\ 
 \notes
-\Enote
+\Enote\label{n4}
 عدم تطابق توضیحات با فرمول نوشته شده, انتخاب دو رئیس از میان $n$ نفر $\binom{n}{2}$ حالت دارد نه $n\times(n-1)$ 
-\Nnote
+\Nnote\label{n5}
 بهتر است روش اثبات (دوگانه شماری)ذکر شود
-\Enote
+\Enote\label{n6}
 یک طرف دوگانه شماری که نیازمند اثبات است, بدیهی در نظر گرفته شده است.
 \solution*{پاسخ صحیح}
 
@@ -127,25 +123,24 @@
 ۶۰ دانشجو در کلاس ریاضیات گسسته حضور دارند.در میان هر ۱۰ نفر از این کلاس , حداقل ۳ نفر نمره مبانی یکسانی دارند. ثابت کنید در این کلاس ۱۵ نفر وجود دارند که نمره مبانی آن ها یکسان است.
 
 \solution
-$ \hyperref[sec:1]{\textcolor{capri}{(1.3.N.1)}} $
+
 در نظر میگیریم حداکثر تعداد تکرار از یک نمره ۱۴ عدد است که در این صورت حداقل به ۵ نمره متفاوت نیاز است . 
- $ \hyperref[sec:2]{\textcolor{capri}{(1.3.N.2)}} $
 در این صورت باز میتوان گروه ۱۰ تایی را از دانش آموزان انتخاب کرد که حداکثر دو نفر نمره یکسان داشته باشند . پس فرض اولیه غلط بوده و مشخص میشود که لااقل از یکی از نمرات وجود دارد که ۱۵ دانش آموز یا بیشتر 
 آن نمره را دارند.
- $ \hyperref[sec:3]{\textcolor{capri}{(1.3.T.1)}}  $
+ 
 
 
 \notes
 
-\Nnote
+\Nnote\label{n7}
 در پاسخ از برهان خلف استفاده شده ولی از آن نام برده نشده است و باید توجه کنیم فرض خلف را حتما بیان کنیم.
 \label{sec:1}
 
-\Nnote
+\Nnote\label{n8}
 باید اصل لانه   کبوتری که از آن استفاده کرده است را نام میبرد و نحوه استفاده از آن مشخص شود.
 \label{sec:2} 
 
-\Tnote
+\Tnote\label{n9}
 پاسخ کامل نیست. پاسخ درست و کامل در پایین آمده است.
 \label{sec:3}
 
@@ -199,8 +194,7 @@ $(1-4x)^{-5}$
 را بیابید.
 
 \solution
-طبق بسط دوجمله ای داریم:  
-$ \hyperref[sec:1]{\textcolor{capri}{(1.4.N.1)}}  $     
+طبق بسط دوجمله ای داریم:    
     \begin{align*}
     \frac{1}{(1-4x)^5}=\sum\limits_{k=0}^{\infty} \binom{k+4}{k}  4 ^ k  x^ k              
     \end{align*}
@@ -220,10 +214,10 @@ $ \hyperref[sec:2]{\textcolor{capri}{(1.4.N.2)}}  $
 
 \notes
 
-\Nnote
+\Nnote\label{n10}
 بهتر است اصل بسط دوجمله ای هم نوشته شود. \label{sec:1} 
 
-\Nnote
+\Nnote\label{n11}
 قبل از استفاده از متغیر باید آن را تعریف کرد. تعریف دنباله $a_n$ ضروری است. \label{sec:2} 		
 
 
@@ -247,7 +241,7 @@ $$\binom{16}{12} (4)^{12}$$
   سوال را با اصل شمول و عدم شمول حل می کنیم: 
    %\[|A_1\cup A_2\cup A_3\cup A_4\cup A_5\cup A_6\cup A_7\cup A_8\cup A_9|=|A_1|+|A_1\cup A_2|+|A_1\cup A_2\cup A_3|+|A_1\cup A_2\cup A_3\cup A_4|\]
    
-    \[|A_1\cup A_2\cup... \cup A_9|=\binom{9}{1}|A_1|+\binom{9}{2}|A_1\cap A_2|+...+\binom{9}{9}|A_1\cap A_2\cap...\cap A_9|\]\textcolor{red}{$(1.5.E.2)$}\\
+    \[|A_1\cup A_2\cup... \cup A_9|=\binom{9}{1}|A_1|+\binom{9}{2}|A_1\cap A_2|+...+\binom{9}{9}|A_1\cap A_2\cap...\cap A_9|\]\\
     حال مقدار عبارت ها را حساب می کنیم:\\
     \[|A_1|=\binom{30}{8}\]
     \[|A_1\cap A_2|=\binom{20}{8}\]
@@ -258,12 +252,11 @@ $$\binom{16}{12} (4)^{12}$$
      \[\binom{40}{8}\]\\
      - حالات مطلوب:
      \[\binom{40}{8}- \binom{9}{1}\binom{30}{8}+\binom{9}{2}\binom{20}{8}-\binom{9}{3}\binom{10}{8}\]
-     \textcolor{red}{$(1.5.E.1)$}
      
 \notes
-\Enote
+\Enote\label{n11}
 تعریف متغیر های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال ها به هیج وجه مشخض نیست
-\Enote
+\Enote\label{n12}
 اثبات و یا در صورت وضوح, اشاره به تقارن میان مجموعه ها برای استفاده از اصل شمول و عدم شمول به این شکل ضروری است.
 \solution*{پاسخ صحیح}
 
@@ -314,7 +307,7 @@ $$\binom{16}{12} (4)^{12}$$
     پس تابع مولد زیر را داریم.
     
    \begin{align*}
-   G(x) = ( 1 + x^2 + x^3 + ...)^2 (x + x^2 + x^3 + ...)^3 = ( \sum_{k = 0}^{\infty} x^k)^2 ( \sum_{k = 0}^{\infty} x^{k+1})^3 =\\ \frac{1}{(1-x)^2} . (\frac{x}{1-x})^3 = \frac{x^3 }{(1-x)^5} = x^2 (1-x)^{-5} = x^3 \sum_{k=0}^{\infty} \binom{k+4}{k} x ^ k =\\ \sum_{k=0}^{\infty} \binom{k+4}{k} x^{k+3} = \hyperref[sec:2]{\textcolor{capri}{(1.6.E.2)}}  \hspace{0.5 cm} \sum_{k=0}^{\infty}\binom{k+1}{k-3} x^k
+   G(x) = ( 1 + x^2 + x^3 + ...)^2 (x + x^2 + x^3 + ...)^3 = ( \sum_{k = 0}^{\infty} x^k)^2 ( \sum_{k = 0}^{\infty} x^{k+1})^3 =\\ \frac{1}{(1-x)^2} . (\frac{x}{1-x})^3 = \frac{x^3 }{(1-x)^5} = x^2 (1-x)^{-5} = x^3 \sum_{k=0}^{\infty} \binom{k+4}{k} x ^ k =\\ \sum_{k=0}^{\infty} \binom{k+4}{k} x^{k+3} = \hyperref[sec:2]{\textcolor{capri}{(1.6.E.2)}}\ref{n14}  \hspace{0.5 cm} \sum_{k=0}^{\infty}\binom{k+1}{k-3} x^k
 \end{align*}    
       
       به دنبال ضریب
@@ -322,21 +315,21 @@ $$\binom{16}{12} (4)^{12}$$
       میگشتیم پس 
       $ k = n-4 $
       و جواب نهایی برابر است با
-      $\binom{n-3}{n-7} = \binom{n-3}{4} \\ \\ \hyperref[sec:3]{\textcolor{capri}{(1.6.N.1)}} \\   $
+      $\binom{n-3}{n-7} = \binom{n-3}{4} \\ \\ \\   $
   
   
       
 \notes
 
-\Enote
+\Enote\label{n13}
   مثال زدن باید به صورتی باشد که حذف آن اختلالی در فهم جواب ایجاد نکند . در اینجا اگر مثال پاراگراف اول را حذف کنیم مشخص نیست تابع مولد برچه اساسی نوشته شده است. پس باید توضیحی درمورد تابع مولد و جمله ای که به دنبال ضریب آن هستیم بدهیم \label{sec:1} 
 		
-\Enote
+\Enote\label{n14}
      نیاز هست که کاملا گفته شود چه تغییر متغیری انجام میشود . در اینجا تغییر متغیر $ k \rightarrow {k+3} $   را داریم.  همیشه به هنگام تغییر متغیر توجه کنیم ممکن است کران ها تغییر کنند. در اینجا کران پایین از صفر به سه میرود. \label{sec:2} 
 	 صورت اصلاح شده:
 	 $ \sum_{k=3}^{\infty}\binom{k+1}{k-3} x^k $
 	
-\Nnote		
+\Nnote\label{n15}		
 	  در طی پاسخ به سوال خوب است دقت کنیم همه ی اعداد را یا فارسی یا انگلیسی 
 	  بنویسیم. \label{sec:3} 
 	  
@@ -361,14 +354,13 @@ $$\binom{16}{12} (4)^{12}$$
    مجموع حالات: 
    \begin{align*}
    \longrightarrow \sum_{k=0}^{n-7}\binom{k+3}{3} \xrightarrow{(1)}  \binom{n-7+4}{4} = \binom{n-3}{4}   \hspace{2cm} 
-    { \hyperref[sec:4]{\textcolor{capri}{(1.6.E.3)}}}
    \end{align*}
    
    
    
  \notes
  
- \Enote
+ \Enote\label{n16}
    به هنگام جایگذاری در فرمول باید جایگذاری ها واضح باشد. در این مثال در فرمول (۱) کران پایین از r هست ولی در قسمتی که از آن استفاده شده کران پایین از ۰ است. همین مطلب گویای آن است که به توضیحات بیشتری نیاز هست. \label{sec:4} 
 		
 		عبارت زیر صورت کامل شده این نکته است:
@@ -436,7 +428,6 @@ A=\sum_{i=0}^{n} i{\binom{n}{i}}^2 \xrightarrow{\times 2} 2A = \sum_{i=0}^{n} i{
  \sum_{i=0}^{n} (i + (n-i)) {\binom{n}{i}}^2 \rightarrow 2A = n \sum_{i=0}^{n} {\binom{n}{i}}^2 \rightarrow 2A = n \sum_{i=0}^{n} \binom{n}{i} \binom{n}{n-i}
 \end{align*}
 بنابراین میدانیم که:
-  $ \hyperref[sec:1]{\textcolor{capri}{(1.7.N.1)}}  $
   \begin{center}
   $  2A = n\binom{2n}{n} \rightarrow A= \frac{n}{2} \binom{2n}{n} $
   \end{center}
@@ -444,7 +435,7 @@ A=\sum_{i=0}^{n} i{\binom{n}{i}}^2 \xrightarrow{\times 2} 2A = \sum_{i=0}^{n} i{
 
 \notes
 
-\Nnote  باید فرمول و اتحاد های مورد استفاده و رفرنس معتبر آن ‌ذکر شود . به عنوان رفرنس اسم اتحاد هم کافی است. 
+\Nnote\label{n17}  باید فرمول و اتحاد های مورد استفاده و رفرنس معتبر آن ‌ذکر شود . به عنوان رفرنس اسم اتحاد هم کافی است. 
  \label{sec:1}         	 
  
  
