--- a/h2wp.tex
+++ b/h2wp.tex
@@ -204,7 +204,7 @@ $(1-4x)^{-5}$
   ضریب 
   $ x ^ {12} $
   است.
-$ \hyperref[sec:2]{\textcolor{capri}{(1.4.N.2)}}  $
+$ {\textcolor{capri}{(1.4.N.2)}}  $
 
 \begin{align*}
   \longrightarrow a_{12} = \binom{16}{12} 4 ^ {12}
@@ -254,9 +254,9 @@ $$\binom{16}{12} (4)^{12}$$
      \[\binom{40}{8}- \binom{9}{1}\binom{30}{8}+\binom{9}{2}\binom{20}{8}-\binom{9}{3}\binom{10}{8}\]
      
 \notes
-\Enote\label{n11}
-تعریف متغیر های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال ها به هیج وجه مشخض نیست
 \Enote\label{n12}
+تعریف متغیر های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال ها به هیج وجه مشخض نیست
+\Enote\label{n13}
 اثبات و یا در صورت وضوح, اشاره به تقارن میان مجموعه ها برای استفاده از اصل شمول و عدم شمول به این شکل ضروری است.
 \solution*{پاسخ صحیح}
 
@@ -302,12 +302,12 @@ $$\binom{16}{12} (4)^{12}$$
    مجموع این ۵ عدد صحیح برابر
    $ 0 + 1 + 3 + 2 + n-10 = n-4 $ 
      است.
-     $ \hyperref[sec:1]{\textcolor{capri}{(1.6.E.1)}}  $
+     $ {\textcolor{capri}{(1.6.E.1)}}  $
      
     پس تابع مولد زیر را داریم.
     
    \begin{align*}
-   G(x) = ( 1 + x^2 + x^3 + ...)^2 (x + x^2 + x^3 + ...)^3 = ( \sum_{k = 0}^{\infty} x^k)^2 ( \sum_{k = 0}^{\infty} x^{k+1})^3 =\\ \frac{1}{(1-x)^2} . (\frac{x}{1-x})^3 = \frac{x^3 }{(1-x)^5} = x^2 (1-x)^{-5} = x^3 \sum_{k=0}^{\infty} \binom{k+4}{k} x ^ k =\\ \sum_{k=0}^{\infty} \binom{k+4}{k} x^{k+3} = \hyperref[sec:2]{\textcolor{capri}{(1.6.E.2)}}\ref{n14}  \hspace{0.5 cm} \sum_{k=0}^{\infty}\binom{k+1}{k-3} x^k
+   G(x) = ( 1 + x^2 + x^3 + ...)^2 (x + x^2 + x^3 + ...)^3 = ( \sum_{k = 0}^{\infty} x^k)^2 ( \sum_{k = 0}^{\infty} x^{k+1})^3 =\\ \frac{1}{(1-x)^2} . (\frac{x}{1-x})^3 = \frac{x^3 }{(1-x)^5} = x^2 (1-x)^{-5} = x^3 \sum_{k=0}^{\infty} \binom{k+4}{k} x ^ k =\\ \sum_{k=0}^{\infty} \binom{k+4}{k} x^{k+3} = {\textcolor{capri}{(1.6.E.2)}} \hspace{0.5 cm} \sum_{k=0}^{\infty}\binom{k+1}{k-3} x^k
 \end{align*}    
       
       به دنبال ضریب
@@ -321,15 +321,15 @@ $$\binom{16}{12} (4)^{12}$$
       
 \notes
 
-\Enote\label{n13}
+\Enote\label{n14}
   مثال زدن باید به صورتی باشد که حذف آن اختلالی در فهم جواب ایجاد نکند . در اینجا اگر مثال پاراگراف اول را حذف کنیم مشخص نیست تابع مولد برچه اساسی نوشته شده است. پس باید توضیحی درمورد تابع مولد و جمله ای که به دنبال ضریب آن هستیم بدهیم \label{sec:1} 
 		
-\Enote\label{n14}
+\Enote\label{n15}
      نیاز هست که کاملا گفته شود چه تغییر متغیری انجام میشود . در اینجا تغییر متغیر $ k \rightarrow {k+3} $   را داریم.  همیشه به هنگام تغییر متغیر توجه کنیم ممکن است کران ها تغییر کنند. در اینجا کران پایین از صفر به سه میرود. \label{sec:2} 
 	 صورت اصلاح شده:
 	 $ \sum_{k=3}^{\infty}\binom{k+1}{k-3} x^k $
 	
-\Nnote\label{n15}		
+\Nnote\label{n16}		
 	  در طی پاسخ به سوال خوب است دقت کنیم همه ی اعداد را یا فارسی یا انگلیسی 
 	  بنویسیم. \label{sec:3} 
 	  
@@ -360,7 +360,7 @@ $$\binom{16}{12} (4)^{12}$$
    
  \notes
  
- \Enote\label{n16}
+ \Enote\label{n17}
    به هنگام جایگذاری در فرمول باید جایگذاری ها واضح باشد. در این مثال در فرمول (۱) کران پایین از r هست ولی در قسمتی که از آن استفاده شده کران پایین از ۰ است. همین مطلب گویای آن است که به توضیحات بیشتری نیاز هست. \label{sec:4} 
 		
 		عبارت زیر صورت کامل شده این نکته است:
@@ -435,7 +435,7 @@ A=\sum_{i=0}^{n} i{\binom{n}{i}}^2 \xrightarrow{\times 2} 2A = \sum_{i=0}^{n} i{
 
 \notes
 
-\Nnote\label{n17}  باید فرمول و اتحاد های مورد استفاده و رفرنس معتبر آن ‌ذکر شود . به عنوان رفرنس اسم اتحاد هم کافی است. 
+\Nnote\label{n18}  باید فرمول و اتحاد های مورد استفاده و رفرنس معتبر آن ‌ذکر شود . به عنوان رفرنس اسم اتحاد هم کافی است. 
  \label{sec:1}         	 
  
  
