--- a/h2wp.tex
+++ b/h2wp.tex
@@ -50,9 +50,9 @@
 -         حالات مطلوب: طبق اصل متمم برابر است با:
          \[64\times63\times62 - 64\times14\times20\]
 \notes
-\Tnote\label{n1}
+\Tnote{n1}
 نشمردن همه حالت ها: در اینجا تمام حالات نامطلوب محاسبه نشده است, زیرا این امکان وجود دارد که رخ اول توسط رخ دوم تهدید نشود و این حالت در نظر گرفته نشده است.
-\Nnote\label{n2}
+\Nnote{n2}
 بهتر بود اشاره شود که  به دلیل تمایز رخ ها چنین نتیجه ای گرفته شده است.
 \solution
      -  کل حالات:\\
@@ -62,7 +62,7 @@
 -         حالات مطلوب: طبق اصل متمم برابر است با:
          \[64\times63\times62 - 64\times14\times20\]
 \notes
-\Nnote\label{n3}
+\Nnote{n3}
 نبود توضیحات کافی برای عبارت: به دلیل نبود توضیحات کافی, تشخیص چرایی غلط بودن جواب نهایی ممکن نیست.
 \solution*{پاسخ صحیح}
 
@@ -96,16 +96,16 @@
     \end{enumerate}
     از تساوی این ۲ حالت حکم مساله اثبات می‌شود:
     \[\displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}} = n\times(n+1)\times{2^{n-2}}\]
-    \\ 
-\notes
-\Enote\label{n4}
-عدم تطابق توضیحات با فرمول نوشته شده, انتخاب دو رئیس از میان $n$ نفر $\binom{n}{2}$ حالت دارد نه $n\times(n-1)$ 
-\Nnote\label{n5}
-بهتر است روش اثبات (دوگانه شماری)ذکر شود
-\Enote\label{n6}
-یک طرف دوگانه شماری که نیازمند اثبات است, بدیهی در نظر گرفته شده است.
-\solution*{پاسخ صحیح}
 
+\notes
+\Enote{n4}
+عدم تطابق توضیحات با فرمول نوشته شده, انتخاب دو رئیس از میان $n$ نفر $\binom{n}{2}$ حالت دارد نه $n\times(n-1)$ 
+\Nnote{n5}
+بهتر است روش اثبات (دوگانه شماری)ذکر شود
+\Enote{n6}
+یک طرف دوگانه شماری که نیازمند اثبات است, بدیهی در نظر گرفته شده است.
+
+\solution*{پاسخ صحیح}
 سوال را با دوگانه شماری حل می کنیم:\\
    فرض کنید $ P$ بیانگر تعداد راه های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد رئیس کمیته و یک نفر معاون باشند و رئیس و معاون می توانند یک نفر باشند. شمارش این راه ها به 2 روش امکان پذیر است.
     \begin{enumerate}
@@ -132,15 +132,15 @@
 
 \notes
 
-\Nnote\label{n7}
+\Nnote{n7}
 در پاسخ از برهان خلف استفاده شده ولی از آن نام برده نشده است و باید توجه کنیم فرض خلف را حتما بیان کنیم.
 \label{sec:1}
 
-\Nnote\label{n8}
+\Nnote{n8}
 باید اصل لانه   کبوتری که از آن استفاده کرده است را نام میبرد و نحوه استفاده از آن مشخص شود.
 \label{sec:2} 
 
-\Tnote\label{n9}
+\Tnote{n9}
 پاسخ کامل نیست. پاسخ درست و کامل در پایین آمده است.
 \label{sec:3}
 
@@ -214,10 +214,10 @@ $ {\textcolor{capri}{(1.4.N.2)}}  $
 
 \notes
 
-\Nnote\label{n10}
+\Nnote{n10}
 بهتر است اصل بسط دوجمله ای هم نوشته شود. \label{sec:1} 
 
-\Nnote\label{n11}
+\Nnote{n11}
 قبل از استفاده از متغیر باید آن را تعریف کرد. تعریف دنباله $a_n$ ضروری است. \label{sec:2} 		
 
 
@@ -254,9 +254,9 @@ $$\binom{16}{12} (4)^{12}$$
      \[\binom{40}{8}- \binom{9}{1}\binom{30}{8}+\binom{9}{2}\binom{20}{8}-\binom{9}{3}\binom{10}{8}\]
      
 \notes
-\Enote\label{n12}
+\Enote{n12}
 تعریف متغیر های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال ها به هیج وجه مشخض نیست
-\Enote\label{n13}
+\Enote{n13}
 اثبات و یا در صورت وضوح, اشاره به تقارن میان مجموعه ها برای استفاده از اصل شمول و عدم شمول به این شکل ضروری است.
 \solution*{پاسخ صحیح}
 
@@ -321,15 +321,15 @@ $$\binom{16}{12} (4)^{12}$$
       
 \notes
 
-\Enote\label{n14}
+\Enote{n14}
   مثال زدن باید به صورتی باشد که حذف آن اختلالی در فهم جواب ایجاد نکند . در اینجا اگر مثال پاراگراف اول را حذف کنیم مشخص نیست تابع مولد برچه اساسی نوشته شده است. پس باید توضیحی درمورد تابع مولد و جمله ای که به دنبال ضریب آن هستیم بدهیم \label{sec:1} 
 		
-\Enote\label{n15}
+\Enote{n15}
      نیاز هست که کاملا گفته شود چه تغییر متغیری انجام میشود . در اینجا تغییر متغیر $ k \rightarrow {k+3} $   را داریم.  همیشه به هنگام تغییر متغیر توجه کنیم ممکن است کران ها تغییر کنند. در اینجا کران پایین از صفر به سه میرود. \label{sec:2} 
 	 صورت اصلاح شده:
 	 $ \sum_{k=3}^{\infty}\binom{k+1}{k-3} x^k $
 	
-\Nnote\label{n16}		
+\Nnote{n16}		
 	  در طی پاسخ به سوال خوب است دقت کنیم همه ی اعداد را یا فارسی یا انگلیسی 
 	  بنویسیم. \label{sec:3} 
 	  
@@ -360,7 +360,7 @@ $$\binom{16}{12} (4)^{12}$$
    
  \notes
  
- \Enote\label{n17}
+ \Enote{n17}
    به هنگام جایگذاری در فرمول باید جایگذاری ها واضح باشد. در این مثال در فرمول (۱) کران پایین از r هست ولی در قسمتی که از آن استفاده شده کران پایین از ۰ است. همین مطلب گویای آن است که به توضیحات بیشتری نیاز هست. \label{sec:4} 
 		
 		عبارت زیر صورت کامل شده این نکته است:
@@ -435,7 +435,7 @@ A=\sum_{i=0}^{n} i{\binom{n}{i}}^2 \xrightarrow{\times 2} 2A = \sum_{i=0}^{n} i{
 
 \notes
 
-\Nnote\label{n18}  باید فرمول و اتحاد های مورد استفاده و رفرنس معتبر آن ‌ذکر شود . به عنوان رفرنس اسم اتحاد هم کافی است. 
+\Nnote{n18}  باید فرمول و اتحاد های مورد استفاده و رفرنس معتبر آن ‌ذکر شود . به عنوان رفرنس اسم اتحاد هم کافی است. 
  \label{sec:1}         	 
  
  
