set notes details

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -38,6 +38,8 @@
 \end{enumerate}
 \chapter*{شمارش}
 
+%% question 1
+
 \question
 سه مهرۀ رخ متمایز و صفحه شطرنجی $8\times8$ داریم. به چند روش می‌توان این سه مهره را در سه خانه از این صفحه قرار داد به طوری که حداقل یک مهره وجود داشته باشد که توسط هیچ مهره ای تهدید نمی شود؟
 \solution
@@ -83,7 +85,9 @@
       \end{enumerate}
 -         حالات مطلوب: طبق اصل متمم برابر است با:
          \[64\times63\times62\ - (64\times14\times20\ + 64\times49\times2\ )\]
-         
+  
+%% question 2
+       
 \question
   اتحاد زیر را ثابت کنید.\\ \\
      \centerline{$1^2 {n \choose 1} + 2^2 {n \choose 2} + 3^2 {n \choose 3} + ... + n^2 {n \choose n} = n(n+1)2^{n-2}$}\\ \\
@@ -119,6 +123,9 @@
     از تساوی 2 حالت فوق حکم مساله اثبات می‌شود:
     \[\displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}} = n\times(n+1)\times{2^{n-2}}\]
     \\ \\
+    
+%% question 3
+
 \question
 ۶۰ دانشجو در کلاس ریاضیات گسسته حضور دارند.در میان هر ۱۰ نفر از این کلاس , حداقل ۳ نفر نمره مبانی یکسانی دارند. ثابت کنید در این کلاس ۱۵ نفر وجود دارند که نمره مبانی آن ها یکسان است.
 
@@ -187,6 +194,8 @@ $\frac{60}{14}$
 \end{enumerate}
 
 
+%% question 4
+
 \question
 ضریب عبارت $ x ^ {12}$
 در بسط عبارت
@@ -204,7 +213,7 @@ $(1-4x)^{-5}$
   ضریب 
   $ x ^ {12} $
   است.
-$ {\textcolor{capri}{(1.4.N.2)}}  $
+$ {\textcolor{byzantine}{(E.XI)}}  $
 
 \begin{align*}
   \longrightarrow a_{12} = \binom{16}{12} 4 ^ {12}
@@ -217,7 +226,7 @@ $ {\textcolor{capri}{(1.4.N.2)}}  $
 \Nnote\label{n10}
 بهتر است اصل بسط دوجمله ای هم نوشته شود. \label{sec:1} 
 
-\Nnote\label{n11}
+\Enote\label{n11}
 قبل از استفاده از متغیر باید آن را تعریف کرد. تعریف دنباله $a_n$ ضروری است. \label{sec:2} 		
 
 
@@ -234,6 +243,8 @@ $$(1 - 4x) ^ {-5} =
 
 جمله $x^{12}$ به ازای مقدار $k = 12$ ساخته می‌شود. بنابراین جواب برابر خواهد بود با: 
 $$\binom{16}{12} (4)^{12}$$
+
+%% question 5
 
 \question
 چند عدد طبیعی حداکثر ۹ رقمی وجود دارد که مجموع ارقام آن برابر با ۳۲ باشد؟\\ \\
@@ -288,6 +299,9 @@ $$\binom{16}{12} (4)^{12}$$
      - حالات مطلوب: طبق اصل متمم برابر است با:
      \[\binom{40}{8}- \binom{9}{1}\binom{30}{8}+\binom{9}{2}\binom{20}{8}-\binom{9}{3}\binom{10}{8}\]
     
+    
+%% question 6
+
 \question 
    با استفاده از توابع مولد نشان دهید تعداد روش های انتخاب ۴ عضو دو به دو  نامتوالی از مجموعه اعداد n
 			 ,...,1,2,3
@@ -302,12 +316,12 @@ $$\binom{16}{12} (4)^{12}$$
    مجموع این ۵ عدد صحیح برابر
    $ 0 + 1 + 3 + 2 + n-10 = n-4 $ 
      است.
-     $ {\textcolor{capri}{(1.6.E.1)}}  $
+     $ {\textcolor{byzantine}{(E.XIV)}}  $
      
     پس تابع مولد زیر را داریم.
     
    \begin{align*}
-   G(x) = ( 1 + x^2 + x^3 + ...)^2 (x + x^2 + x^3 + ...)^3 = ( \sum_{k = 0}^{\infty} x^k)^2 ( \sum_{k = 0}^{\infty} x^{k+1})^3 =\\ \frac{1}{(1-x)^2} . (\frac{x}{1-x})^3 = \frac{x^3 }{(1-x)^5} = x^2 (1-x)^{-5} = x^3 \sum_{k=0}^{\infty} \binom{k+4}{k} x ^ k =\\ \sum_{k=0}^{\infty} \binom{k+4}{k} x^{k+3} = {\textcolor{capri}{(1.6.E.2)}} \hspace{0.5 cm} \sum_{k=0}^{\infty}\binom{k+1}{k-3} x^k
+   G(x) = ( 1 + x^2 + x^3 + ...)^2 (x + x^2 + x^3 + ...)^3 = ( \sum_{k = 0}^{\infty} x^k)^2 ( \sum_{k = 0}^{\infty} x^{k+1})^3 =\\ \frac{1}{(1-x)^2} . (\frac{x}{1-x})^3 = \frac{x^3 }{(1-x)^5} = x^2 (1-x)^{-5} = x^3 \sum_{k=0}^{\infty} \binom{k+4}{k} x ^ k =\\ \sum_{k=0}^{\infty} \binom{k+4}{k} x^{k+3} = {\textcolor{byzantine}{(E.XV)}} \hspace{0.5 cm} \sum_{k=0}^{\infty}\binom{k+1}{k-3} x^k
 \end{align*}    
       
       به دنبال ضریب
@@ -415,6 +429,7 @@ $$\binom{16}{12} (4)^{12}$$
                     $$\binom{n - 3}{4}$$
         
 
+%% question 7
 \question
  اتحاد زیر را ثابت کنید.
      \begin{align*}
