--- a/h2wp.tex
+++ b/h2wp.tex
@@ -106,6 +106,12 @@
 یک طرف دوگانه شماری که نیازمند اثبات است, بدیهی در نظر گرفته شده است.
 
 \solution*{پاسخ صحیح}
+ds
+\refnote{n4}
+asd
+\refnote{n5}
+
+
 سوال را با دوگانه شماری حل می کنیم:\\
    فرض کنید $ P$ بیانگر تعداد راه های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد رئیس کمیته و یک نفر معاون باشند و رئیس و معاون می توانند یک نفر باشند. شمارش این راه ها به 2 روش امکان پذیر است.
     \begin{enumerate}
