first page edit

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -7,21 +7,46 @@
 \begin{document}
 \maketitle
 
-هر کس که وارد مبحث علم ریاضیات میشود باید توانایی درست خواندن و درک کردن و نوشتن مسائل و اثبات ها را کسب 
-چیزی که برای ما اهمیت دارد درست نویسی است چرا که درست نوشتن اثبات ها نقش به سزایی در درست خواندن و درک کردن آن ها نیز دارد.
+هرگاه نویسنده‌ای توانایی درست نوشتن را نداشته باشد در انتقال صحیح تراوشات فکری خود به خواننده ناکام می‌ماند. نوشتار در خصوص مباحث علم ریاضیات گسسته نیز علاوه بر درک درست از مفاهیم، نیاز به دانش «صحیح نوشتن» و روش به تحریر درآوردن مسائل و اثبات ها دارد تا بتواند هدف انتقال بی کم و کاست به خواننده را کسب نماید.
 
-خیلی از اوقات پیش می آید که اثبات موضوعی بسیار منطقی ب نظر می آید ولی در واقع کاملا اشتباه هست. 
-به همین خاطر هست که ما نیاز داریم یادبگیریم چگونه اثبات ها را دنبال کنیم.
-زمانی که اثبات ها را مرحله به مرحله با استدلال های منطقی و درست پیش ببریم میتوانیم از درست بودن و معتبر بودن نتیجه ای که به دست آورده ایم مطمئن باشیم.
-به علاوه این که در نهایت وقتی یاد بگیریم چگونه استدلال های به جا بیاوریم و اثباتمان را کامل کنیم ، به فهم عمیق تری از ریاضیات و مسائل میرسیم.
+چیزی که واقعا اهمیت دارد این است که با درست نوشتن، خواننده درک صحیحی از راه و روش حل مسائل و اثبات ها كسب كند و توانایی درک و خلاقیت در کشف روش‌های حل مسائل را در خود ارتقاء بخشد.
+در بیشتر مواقع اثبات مسائل آسان و منطق حل مسائل بسیار دست یافتنی به نظر می آید ولی در واقع در زمان نوشتن حل مسائل و اثبات ها رویکرد اشتباهی را پیش می گیریم.
+به همین خاطر است که ما نیاز داریم یاد بگیریم كه چگونه اثبات ها را دنبال کنیم.
 
-پایه ی درست نویسی ساده است.
-فقط کافی است که دقت کنیم هر جمله ای که استفاده میکنیم یکی از موارد زیر باشد:
-۱.فرض مسئله
-۲.از جمله ی قبلی به طور شفاف نتیجه شده باشد.
-۳.درستی آن قبلا اثبات شده باشد.
+هر چند كه رعایت حداقل معیارهای درست نویسی و پیشبرد مرحله به مرحله ی حل مسائل و اثبات ها با استدلال های منطقی، خیال ما را نسبت به درست و معتبر بودن نوشته ی خود راحت می نماید ولی مطالعه ی متون فنی و تعمق در نوشتارهای غنیِ ما را به مرحله ای از بلوغ در نویسندگی می رساند كه علاوه بر رسیدن به بهترین نتیجه ی ممكن، ما را در انتقال صحیح معنا و مفهوم و درك صحیح نوشته بسیار موفق می سازد.
 
-در این جزوه ما سعی داریم شما را بیشتر با درست نویسی و نکاتی که در این جهت ما را سوق میدهند آشنا کنیم ( تا در نهایت یاد بگیریم در دیگر مراحل زندگی مان هم با منطق باشیم. )
+و در نهایت زمانی که فرا بگیریم، چگونه با اتكا به استدلال های درست اثباتمان را کامل کنیم، به فهم عمیق تری از مسائل میرسیم.
+
+پایه و بنیاد درست نویسی بسیار آسان است. تنها کافی است که دقت نماییم تا جملات استفاده شده به یکی از اشکال زیر باشد:
+
+\begin{enumerate}
+\item
+یا خود فرض مسئله باشد
+\item
+یا به صورت كاملا شفاف و واضح از جملات قبلی نتیجه شده باشد.
+\item
+و یا درستی آن قبلا اثبات شده باشد.
+\end{enumerate}
+
+در این جزوه تمام سعی و کوشش ما بر این بوده است تا شما را بیشتر با «درست نویسی» و نکاتی که خواننده را به این جهت سوق دهد آشنا کنیم.
+امید است كه فراگیری نكات «درست نویسی» در تمامی مراحل زندگی راهبر و راهنمای شما باشد.
+
+
+%هر کس که وارد مبحث علم ریاضیات میشود باید توانایی درست خواندن و درک کردن و نوشتن مسائل و اثبات ها را کسب 
+%چیزی که برای ما اهمیت دارد درست نویسی است چرا که درست نوشتن اثبات ها نقش به سزایی در درست خواندن و درک کردن آن ها نیز دارد.
+
+%خیلی از اوقات پیش می آید که اثبات موضوعی بسیار منطقی ب نظر می آید ولی در واقع کاملا اشتباه هست. 
+%به همین خاطر هست که ما نیاز داریم یادبگیریم چگونه اثبات ها را دنبال کنیم.
+%زمانی که اثبات ها را مرحله به مرحله با استدلال های منطقی و درست پیش ببریم میتوانیم از درست بودن و معتبر بودن نتیجه ای که به دست آورده ایم مطمئن باشیم.
+%به علاوه این که در نهایت وقتی یاد بگیریم چگونه استدلال های به جا بیاوریم و اثباتمان را کامل کنیم ، به فهم عمیق تری از ریاضیات و مسائل میرسیم.
+
+%پایه ی درست نویسی ساده است.
+%فقط کافی است که دقت کنیم هر جمله ای که استفاده میکنیم یکی از موارد زیر باشد:
+%۱.فرض مسئله
+%۲.از جمله ی قبلی به طور شفاف نتیجه شده باشد.
+%۳.درستی آن قبلا اثبات شده باشد.
+
+%در این جزوه ما سعی داریم شما را بیشتر با درست نویسی و نکاتی که در این جهت ما را سوق میدهند آشنا کنیم ( تا در نهایت یاد بگیریم در دیگر مراحل زندگی مان هم با منطق باشیم. )
 
 \textbf{انواع نکات}
 
