--- a/h2wp.tex
+++ b/h2wp.tex
@@ -13,19 +13,18 @@
 در بیشتر مواقع اثبات مسائل آسان و منطق حل مسائل بسیار دست یافتنی به نظر می آید ولی در واقع در زمان نوشتن حل مسائل و اثبات ها رویکرد اشتباهی را پیش می گیریم.
 به همین خاطر است که ما نیاز داریم یاد بگیریم كه چگونه اثبات ها را دنبال کنیم.
 
-هر چند كه رعایت حداقل معیارهای درست نویسی و پیشبرد مرحله به مرحله ی حل مسائل و اثبات ها با استدلال های منطقی، خیال ما را نسبت به درست و معتبر بودن نوشته ی خود راحت می نماید ولی مطالعه ی متون فنی و تعمق در نوشتارهای غنیِ ما را به مرحله ای از بلوغ در نویسندگی می رساند كه علاوه بر رسیدن به بهترین نتیجه ی ممكن، ما را در انتقال صحیح معنا و مفهوم و درك صحیح نوشته بسیار موفق می سازد.
-
+هر چند كه رعایت حداقل معیارهای درست نویسی و پیشبرد مرحله به مرحله ی حل مسائل و اثبات ها با استدلال های منطقی، خیال ما را نسبت به درست و معتبر بودن نوشته ی خود راحت می نماید ولی مطالعه ی متون فنی و تعمق در نوشتارهای غنیِ ما را به مرحله ای از بلوغ در نویسندگی می رساند كه علاوه بر رسیدن به بهترین نتیجه ی ممكن، ما را در انتقال صحیح معنا و مفهوم و درك صحیح نوشته بسیار موفق می سازد
 و در نهایت زمانی که فرا بگیریم، چگونه با اتكا به استدلال های درست اثباتمان را کامل کنیم، به فهم عمیق تری از مسائل میرسیم.
 
 پایه و بنیاد درست نویسی بسیار آسان است. تنها کافی است که دقت نماییم تا جملات استفاده شده به یکی از اشکال زیر باشد:
 
 \begin{enumerate}
 \item
-یا خود فرض مسئله باشد
+خود فرض مسئله باشد.
 \item
-یا به صورت كاملا شفاف و واضح از جملات قبلی نتیجه شده باشد.
+به صورت كاملا شفاف و واضح از جملات قبلی نتیجه شده باشد.
 \item
-و یا درستی آن قبلا اثبات شده باشد.
+درستی آن قبلا اثبات شده باشد.
 \end{enumerate}
 
 در این جزوه تمام سعی و کوشش ما بر این بوده است تا شما را بیشتر با «درست نویسی» و نکاتی که خواننده را به این جهت سوق دهد آشنا کنیم.
